--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,4 +1,5 @@
-# AWS Monitor Configuration
+# Heimdallr Configuration
+# The All-Seeing Guardian for Your Infrastructure
 # Copy to config.yaml and customize
 
 # ─────────────────────────────────────────────────────────────────────────────
