Add ChatMaster Discord DM alert integration
Implements ChatMaster API client for sending personalized Discord DM alerts, updates configuration and notifier logic to support ChatMaster routing, and documents setup in README and config example. Marks ChatMaster integration as complete in the implementation checklist. Also improves deployment script to create venv if missing and updates .gitignore for local Claude settings.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ env/
 *.swo
 *~
 
+# Claude Code local settings
+.claude/settings.local.json
+
 # Configuration (contains secrets)
 config.yaml
 .env
