--- a/config.example.yaml
+++ b/config.example.yaml
@@ -117,6 +117,27 @@ notifications:
     enabled: false
     webhook_url: ""
 
+  # ChatMaster API (Discord DMs)
+  # Sends alerts directly to your Discord DMs, even if you're not watching a channel
+  # Get API key: Use /alert_api register in Discord (requires ChatMaster bot)
+  chatmaster:
+    enabled: false
+    api_url: "http://18.232.150.112:8080/api/v1"  # ChatMaster Alert API
+    api_key: ""       # Or set CHATMASTER_API_KEY env var
+    api_secret: ""    # Or set CHATMASTER_API_SECRET env var
+
+    # Which alerts to send via ChatMaster
+    routing:
+      p1_alerts: true       # Critical alerts
+      p2_alerts: true       # High priority alerts
+      p3_alerts: false      # Normal priority (can be noisy)
+      health_changes: true  # Service health state changes
+      action_results: false # Remediation action results
+
+    # Optional: only send alerts for specific services
+    # Leave empty to receive alerts for all services
+    services: []
+
 # ─────────────────────────────────────────────────────────────────────────────
 # Logging
 # ─────────────────────────────────────────────────────────────────────────────
