Add secure alert API and global notification controls
Introduces a secure HMAC-authenticated alert API endpoint (/api/v1/alert/send) for external alert triggers, using ChatMaster credentials. Adds a global notification enable/disable switch to configuration and code, and updates notification logic to respect this setting. Includes deployment and test scripts, improves ChatMaster client error handling, and documents new config options.

--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,9 @@ config.yaml
 .env
 .env.*
 !.env.example
-ec2-deployment.local.md
+
+# Local docs (may contain credentials)
+*.local.md
 
 # Logs
 Logs/
